Cambiar número de exclamaciones

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ed_ev02_ud07_Exameple6</name>
+	<name>ed_ev02_ud07_Example6</name>
 	<comment></comment>
 	<projects>
 	</projects>
